[package]
name = "tokim"
version = "0.1.0"
edition = "2021"
default-run= "fs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

tokio-tungstenite = "0.15.0"
futures = "0.3"