[package]
name = "tokim"
version = "0.1.0"
edition = "2021"
default-run= "fs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

tokio-tungstenite = "0.15.0"
futures = "0.3"

# jwt
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

#AES
aes = "0.8"
ctr = "0.9"
cipher = {version = "0.4.3", features=["block-padding"]}
sha2 = "0.9.2"
hex = "0.4.2"

base64 = "0.13.0"