[package]
name = "tokim"
version = "0.1.0"
edition = "2021"
default-run= "fs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

tokio-tungstenite = "0.20.0"
futures = "0.3"

# jwt
jsonwebtoken = "8.3.0"
serde = "1.0" #json也需要这个依赖
chrono = "0.4"

#AES
aes = "0.8"
ctr = "0.9"
cipher = {version = "0.4.3", features=["block-padding"]}
sha2 = "0.10.7"
hex = "0.4.2"

#base64
base64 = "0.21.2"

#protobuf 
protobuf-codegen-pure = "2.28.0"
protobuf = "3.2.0"

#http
hyper = { version = "0.14.27", features = ["full"] }

#json
serde_json = "1.0"

#sqlite
rusqlite = { version = "0.29.0", features = ["bundled"] }

# url
url = '2.4.0'